# ledcontrol

./: CMakeLists.txt  FindBOOST.cmake  README.md  ledcontrol.service
env/buildenv/raspbian/: Dockerfile  build.sh  build_dockerized.sh  build_image.sh  run_build_container.sh
env/deploymentenv/raspbian/: Dockerfile  build_image.sh
html/: index.html  index.php
src/: AnimationPlayerInterface.h  CMakeLists.txt  Common.h  HSVColor.cc  HSVColor.h  LedControl.cc  LedControl.h  Logging.cc  Logging.h  OutputControl.cc  OutputControl.h  RGBColor.cc  RGBColor.h  RedisHandler.h  SetColorCommand.h  SetIntensityCommand.h  StringCommandAdapter.cc  StringCommandAdapter.h  TcpInterface.cc  TcpInterface.h  UdpInterface.cc  UdpInterface.h  UnixDomainSocketInterface.cc  UnixDomainSocketInterface.h  Utils.h  main.cc
test/: CMakeLists.txt  GlobalTestFixture.h  TestCurveStore.cc  TestHSVColor.cc  TestLedControl.cc  TestMain.cc  TestRGBColor.cc  TestSegment.cc  TestTcpInterface.cc
tools/: build_brewer.sh  build_brewer_coverage.sh  build_ledcontrol.sh  build_ledcontrol_coverage.sh
